samples/_failures_safe/1761368946_652dca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45e22fdf.c: In function ‘main’:
./samples/SAFE/__tmp_45e22fdf.c:148:16: error: missing terminating " character
  148 |         printf("Result
      |                ^~~~~~~
./samples/SAFE/__tmp_45e22fdf.c:148:9: error: expected expression at end of input
  148 |         printf("Result
      |         ^~~~~~
./samples/SAFE/__tmp_45e22fdf.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_45e22fdf.c:148:9: error: expected declaration or statement at end of input
